# page-infra

./: README.md  pyproject.toml  setup.py
page_infra/: __init__.py  abstractions.py  infra.py  options.py
page_infra/infrastructure/: rabbit.py
page_infra/marketplaces/: google_shopping.py  mercado_livre.py  rihappy.py
page_sender/: abstractions.py  options.py
page_sender/infrastructure/: rabbit.py
