[project]
name = "page-infra"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "aio-pika==8.2.5",
    "meilisearch==0.22.2",
    "motor==3.1.1",
    "redis==4.3.4",
    "structlog==22.2.0",
    "la-stopwatch==0.0.9",
    "page-models==0.2.1",
]

[project.urls]
repository = "https://github.com/la-catalog/page-infra"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
black = "python -m black ."
isort = "python -m isort -v --ac --profile black ."

[tool.pdm.dev-dependencies]
lint = [
    "black==22.10.0",
    "isort==5.10.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[[tool.pdm.source]]
url = "https://la-catalog.github.io/pypi/simple/"
name = "la-catalog"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
name = "pypi"

[tool.pdm.resolution]
respect-source-order = true
